# train_darknet

./: CMakeLists.txt  README.md
assets/: download.sh  yolov3.cfg  yolov4-tiny.cfg  yolov4.cfg
darknet/: ReadMe.md
datasets/custom_data/: ReadMe.txt
runtime/: CMakeLists.txt  main.cpp  yoloDetector.hpp
utils/: export.py  utils.py
